test/test_suite/errors/try_with_assign_to_failable.c3
fn void test()
{
    int? z;
    int? w;
    try w = z; // #error: can only be used when unwrapping an optional
}
